policies/require-image-digests/.test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-image-digests
policies:
  - ../policy.yaml
resources:
  - resources.yaml
results:
  - policy: require-image-digests
    rule: require-digest
    kind: Pod
    resources:
      - good-pod-digest
      - good-pod-tag-and-digest
    result: pass
  - policy: require-image-digests
    rule: require-digest
    kind: Pod
    resources:
      - bad-pod-tag-only
      - bad-pod-init-tag-only
    result: fail
  - policy: require-image-digests
    rule: require-digest
    kind: Pod
    resources:
      - exempt-system-pod
    result: skip
